# macroquad-fbo-test

./: Cargo.toml  README.md
.pi/extensions/: nail-doctor.ts
.pi/skills/nails/: SKILL.md
docs/nails/: .gitignore  config.toml
docs/nails/closed/: ft-1ed-bug-miniquad-endrenderpass-causes-catastrophic-fbo-per.md
docs/nails/open/: ft-1ed-bug-miniquad-endrenderpass-causes-catastrophic-fbo-per.md
src/: main.rs
